# .rune

./: .env.example  .gitignore  .gitmodules  .roomodules  .roorules  metadata.md
apps/rune-cli/: .test  README.md  pyproject.toml
apps/rune-cli/src/rune/: cli.py
apps/rune-cli/src/rune/commands/: config.py  diff.py  fetch.py  init.py  pull.py  remote.py  skill.py  status.py  submodule.py  update.py  vendor.py
apps/rune-cli/src/rune/services/: config.py  module.py  skill.py  workspace.py
apps/rune-cli/src/rune/utils/: __init__.py  git.py  os.py
apps/rune-cli/tests/: conftest.py
apps/rune-cli/tests/commands/: test_config.py  test_init.py  test_remote.py  test_status.py  test_submodule.py  test_update.py  test_vendor.py
apps/rune-cli/tests/services/: test_skill.py
skills/Automatiq/: SKILL.md
skills/CloakBrowser/: SKILL.md
skills/architecture/data/: SKILL.md
skills/architecture/data/accidental-taxonomist-second-edition-the-heather-hedden/: 01-what-are-taxonomies.md  02-who-are-taxonomists.md  03-creating-terms.md  04-creating-relationships.md  05-software-for-taxonomy-creation-and-management.md  07-taxonomies-for-automated-indexing.md  08-taxonomy-structures.md  10-taxonomy-planning-design-and-creation.md  11-taxonomy-implementation-and-evolution.md  12-taxonomy-work-and-the-profession.md
skills/camoufox/: SKILL.md
skills/crawlee-python/: SKILL.md
skills/faststream/: SKILL.md
skills/frappe-ui/: SKILL.md
skills/hatchet/: SKILL.md
skills/plasmo/: SKILL.md
skills/trigger/: SKILL.md
skills/trigger.dev/: SKILL.md
(+104 files in other folders)
