[project]
name = "rune-cli"
version = "2026.1.0"
description = "Rune CLI"
authors = [
    {name = "Aryan Singh", email = "aquiveal@gmail.com"},
]
dependencies = ["typer>=0.15.2", "pydantic>=2.13.3", "pyyaml>=6.0.1"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
rune = "rune.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
